--- a/new.html
+++ b/new.html
@@ -128,7 +128,7 @@
             window.location.href = nextPageUrl;
         }
 
-        fetch('https://raw.githubusercontent.com/byte-capsule/FanCode-Hls-Fetcher/main/Fancode_hls_m3u8.Json')
+        fetch('https://raw.githubusercontent.com/drmlive/fancode-live-events/main/fancode.json')
             .then(response => response.json())
             .then(data => {
                 const matchesContainer = document.getElementById('matches-container');
